remark-container-styles.css
/* purgecss start ignore */
/* base admonitions variables hight contrast */
:root {
  --cb-admonition-background-color: var(--color-b);
  --cb-admonition-border-width: 3px;
  --cb-admonition-border-color: var(--color-t-h);
  --cb-admonition-border-radius: 0.4rem;
  --cb-admonition-color: #fff;
  --cb-admonition-padding-vertical: 1rem;
  --cb-admonition-padding-horizontal: 1rem;
  --cb-color-note: #ebedf0;
  --cb-color-important: #0e607c;
  --cb-color-tip: #006600;
  --cb-color-caution: #705200;
  --cb-color-warning: #b50309;
  --cb-color-text-dark: #1c1e21;
  --cb-admonition-icon-color: var(--cb-admonition-color);
}

/* apply variables to admonitions */

.admonition {
    width: max-content
}

.admonition time::after {
    content: " • "
}

.admonition p, blockquote {
    font-size: var(--d-sm);
}

.admonition h5 {
  margin-top: 0;
  margin-bottom: 8px;
  /* font-family: var(--font-primary); */
  font-size: var(--d-md);
  /* text-transform: uppercase; */
}

.admonition-icon {
  display: inline-block;
  vertical-align: middle;
  margin-right: 0.2em;
}

.admonition-icon svg {
  display: inline-block;
  width: 22px;
  height: 22px;
  stroke-width: 0;
  fill: var(--cb-admonition-icon-color);
  stroke: var(--cb-admonition-icon-color);
}

.admonition-content > :last-child {
  margin-bottom: 0;
}

/* set variables based on admonition type */
.admonition {
  background-color: var(--cb-admonition-background-color);
  border: var(--cb-admonition-border-width) solid
    var(--cb-admonition-border-color);
  border-radius: var(--cb-admonition-border-radius);
  box-sizing: border-box;
  color: var(--cb-admonition-color);
  padding: var(--cb-admonition-padding-vertical)
    var(--cb-admonition-padding-horizontal);
  margin-bottom: 1em;
}

.admonition-note {
  --cb-admonition-background-color: var(--cb-color-note);
  --cb-admonition-color: var(--cb-color-text-dark);
  --cb-admonition-icon-color: var(--cb-admonition-color);
}

.admonition-important {
  --cb-admonition-background-color: var(--cb-color-important);
}

.admonition-tip {
  --cb-admonition-background-color: var(--cb-color-tip);
}

.admonition-caution {
  --cb-admonition-background-color: var(--cb-color-caution);
}

.admonition-warning {
  --cb-admonition-background-color: var(--cb-color-warning);
}

/* purgecss end ignore */

